--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/haardhiklogo.svg" />
+    <link rel="icon"  href="src/assets/haardhiklogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starry Outline</title>
+    <title>Chat Slur Detector</title>
   </head>
   <body>
     <div id="root"></div>
